project/stage/testing/semantic/semantic_tests/reject/assign_int_tofloat.ul
void main() {
    float f;
    f = 1;
}
